# rocketSim-code

./: .gitignore  .gitmodules  2.000000.txt  3dNBodyProblem.cpp  CMakeLists.txt  CMakePresets.json  README.md  algorithm.hpp  infoFile.txt  math.tex  planet 1.000000000000.txt  planet 1.txt  planet 2.000000000000.txt  planet 2.txt  point_light.frag.spv  point_light.vert.spv  shader2d.vert.spv  shaderText.vert.spv  simple_shader.frag.spv  test.cpp
3dFullRocketSim/: fixedPlanet.cpp  fixedPlanetSimObj.cpp  fixedPlanetSimObj.hpp  include.hpp  main.cpp  msRocketFung.h  msRocketFung.hpp  planet.cpp  planetSimObj.hpp  rocketSimObj.hpp  rocketsimObj.cpp  rocketsimObj.hpp  run.cpp  runFung.cpp  test.cpp
3dFullRocketSim/airDensityfiles/: normalEarth.txt  test.txt
3dFullRocketSim/databaseCode/: hello.txt  main.hpp  mainForUnity.cs  test.cpp  writeVectorsToDatabaseFile.cpp
3dFullRocketSim/headers/: fixedPlanet.hpp  fixedPlanetSimObj.hpp  planet.hpp
Old/2dFlightSim/: readformfilegraff2stage.cpp  rocketGraffFungsjons.h  simpleRocket.cpp  sst100km.cpp
Old/3dFullRocketSim/: fixedPlanet.cpp  main.cpp  planet.cpp
Old/Vulkan/: App.cpp  Buffer.cpp  Camera.cpp  GameObject.cpp  ModelCash.cpp  ModelCash.hpp  ObjectRenderingCashing.cpp  ObjectRenderingCashing.hpp  PeripheralInputDevice.cpp  Pipeline.hpp  Surface.hpp  Text.hpp  Window.cpp  descriptors.cpp  descriptors.hpp
Simulation/: DragSim.cpp  DragSim.hpp  Engine.cpp  Engine.hpp  FuelTank.cpp  FuelTank.hpp  Fuelmap.cpp  Fuelmap.hpp  LoadManager.cpp  LoadManager.hpp  Mesh.cpp  Mesh.hpp  ModelCash.cpp  ModelCash.hpp  ObjectRenderingCashing.cpp  ObjectRenderingCashing.hpp  Planet.cpp  Quaternion.cpp  Quaternion.hpp  Rocket simulation.txt  Rocket.cpp  Rocket.hpp  RocketStage.cpp  RocketStage.hpp  Simulation.sln  Simulation.vcxproj  Simulation.vcxproj.filters  SimulationModel.cpp  SimulationModel.hpp  Source.cpp  Vector3.cpp  Vector3.hpp  controles.cpp  controles.hpp  flags.hpp  glad.c  logging.cpp  logging.hpp  main.cpp  planet.hpp  (+3 more)
Simulation/FileSystem/: Instructions.cpp  Instructions.hpp  LoadManager.cpp  LoadManager.hpp  RocketInstructions.cpp  RocketInstructions.hpp  fileSystem.cpp  fileSystem.hpp  logging.cpp  logging.hpp
Simulation/Simulation/: Behavior.cpp  Behavior.hpp  BehaviorObject.cpp  BehaviorObject.hpp  CMakeLists.txt  CommandQueue.cpp  CommandQueue.hpp  Component.cpp  Component.hpp  Container.hpp  RenderingCache.cpp  RenderingCache.hpp  Simulation.cpp  Simulation.hpp  simBenchmark.cpp  simBenchmark.hpp
Simulation/Simulation/ECS/: CMakeLists.txt  DataRegistry.hpp  Entity.cpp  Entity.hpp  Integrator.cpp  Integrator.hpp  Simulation.cpp  Simulation.hpp  forceGenerators.hpp  types.hpp
Simulation/Simulation/Entities/: PhysicsBody.cpp  PhysicsBody.hpp
Simulation/Simulation/behaviors/: Gravity.hpp  GravityBehaviorObject.hpp  RungeKutta4BehaviorObject.hpp  model3D.hpp  model3DBehaviorObject.hpp  rungeKutta4.cpp  rungeKutta4.hpp
Simulation/Simulation/components/: Planet.cpp  Planet.hpp
Simulation/Simulation/x64/Debug/: App.nativecodeanalysis.sarif  Camera.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  Model.nativecodeanalysis.sarif  Pipeline.nativecodeanalysis.sarif  PointLightSystem.nativecodeanalysis.sarif  RenderSystem.nativecodeanalysis.sarif  RenderSystem2D.nativecodeanalysis.sarif  Simulation.exe.recipe  Text.nativecodeanalysis.sarif  TextInputPopup.nativecodeanalysis.sarif  TextSystem.nativecodeanalysis.sarif  UI.nativecodeanalysis.sarif  confirmationScrean.nativecodeanalysis.sarif  editor.nativecodeanalysis.sarif  error.nativecodeanalysis.sarif  freeCam.nativecodeanalysis.sarif  loadInConfig.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  mainMenu.nativecodeanalysis.sarif  newSimulation.nativecodeanalysis.sarif  run.nativecodeanalysis.sarif  startMenu.nativecodeanalysis.sarif  telemetry.nativecodeanalysis.sarif  timeControles.nativecodeanalysis.sarif  vc143.idb  windowFunctions.nativecodeanalysis.sarif
Simulation/Simulation/x64/Debug/Simulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Simulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Simulation/Simulation/x64/Release/: Simulation.exe.recipe
Simulation/Simulation/x64/Release/Simulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Simulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Simulation/Vulkan/: App.cpp  App.hpp  Buffer.hpp  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  GameObject.cpp  GameObject.hpp  Model.cpp  Model.hpp  PeripheralInputDevice.cpp  PeripheralInputDevice.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Text.cpp  Text.hpp  UI.cpp  UI.hpp  Window.cpp  Window.hpp  WindowTypeSpecificInfo.hpp  callbackFunctions.cpp  callbackFunctions.hpp  descriptors.cpp  frameInfo.hpp
Simulation/gpuInterface/: CMakeLists.txt  Model.cpp  Model.hpp
Simulation/helpers/: CMakeLists.txt  ID.cpp  ID.hpp  Mesh.cpp  Mesh.hpp  Pointer.hpp  Quaternion.cpp  Quaternion.hpp  TransformComponent3D.cpp  TransformComponent3D.hpp  Vector3.cpp  Vector3.hpp  controles.cpp  controles.hpp  flags.hpp  (+7 more)
Simulation/ui/ImGui/: CMakeLists.txt  imconfig.cpp  imgui_impl_glfw.cpp
Simulation/ui/openGL/: CMakeLists.txt  Camera.cpp  Camera.hpp  Model.cpp  OpenGLApp.cpp  OpenGLApp.hpp  Shader.cpp  callbacks.hpp  nativeOSfunctions.cpp
Simulation/ui/openGL/RenderObjects/: vector.cpp  vector.hpp
Simulation/ui/openGL/shaders/: frag.frag  vert.vert
Simulation/ui/openGL/windows/: ImguiWindow.cpp
Simulation/ui/openGL/windows/core/: EntityView.cpp  EntityView.hpp  TimeWindow.cpp  renderWindow.cpp  renderWindow.hpp
Simulation/ui/openGL/windows/editor/: testAdder.cpp  testAdder.hpp
Simulation/ui/openGL/windows/startup/: Launcher.cpp  Launcher.hpp
flight sim/: graff.cpp  graffFileWriter.cpp  rokcet rundt jorda.cpp
graff/: graffFung.h
graffDrawer/: graff.cpp  graffFromDatabase.cpp  run.bat  test.cpp
test/: h.txt  obj.cpp  objTest.cpp  test.cpp
(+246 files in other folders)
